--- a/org.kevoree.docker.containerdriver/src/main/resources/fxml/ContainerDriverApp.fxml
+++ b/org.kevoree.docker.containerdriver/src/main/resources/fxml/ContainerDriverApp.fxml
@@ -45,7 +45,7 @@
                                     <Insets left="5.0" right="5.0" />
                                  </HBox.margin>
                               </TextField>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Frequency">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Frequency (%)">
                                  <HBox.margin>
                                     <Insets left="5.0" right="5.0" top="5.0" />
                                  </HBox.margin>
